--- a/proj2/index.html
+++ b/proj2/index.html
@@ -1,7 +1,269 @@
 <html>
-	<head>
-	</head>
-	<body>
-		Project 2 here
-	</body>
+  <head>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+
+  <body>
+    <h1>Project 2</h1>
+    Isabel Li
+    <br /><br />
+    <hr />
+    <br />
+    <h2>Task 1</h2>
+    <p>
+      To rasterize triangles, we want to sample every point inside the triangle.
+      To do this, we want to be sure that every point is within the bounds of
+      the three lines which comprise the triangle, and then apply the sampling
+      function to these points which fulfil this requirement. This often
+      involves iterating through points in the frame buffer and testing whether
+      they are within these bounds.
+    </p>
+    <p>
+      For our rasterization algorithm, we identify and organise the three points
+      of the triangle into leftmost, middle, and rightmost points. We then
+      identify the slopes of the three lines of the triangle.
+    </p>
+
+    <p>
+      We sample in two halves -- one loop which samples all points within the
+      triangle from the leftmost to the middle point, and then repeating the
+      same process in a loop from the middle point to the rightmost point. We
+      find an upper bound slope and lower bound slope by comparing the
+      leftmost-to-middle slope and the leftmost-to-rightmost slope. From the
+      left point, we loop through points within the triangle, sampling from the
+      leftmost point to the middle point in vertical lines. We find the starting
+      and ending points of the next vertical line by increasing y's lower bound
+      and upper bound by the respective slopes of the triangle. Once we reach
+      the middle point, we re-identify the upper and lower bound slopes and
+      repeat this sampling process for the remaining section of the triangle.
+    </p>
+
+    <p>
+      Since this algorithm only samples points within the triangle, it is better
+      than one which checks each sample within the bounding box of the triangle.
+      Unfortunately we didn't have time to compare this with simple bounding box
+      triangle rasterization, since this was the initial approach we directly
+      implemented and so couldn't turn "off" our optimization.
+    </p>
+    <br />
+    <img src="./task1.png" width="600px" id="figure" />
+    <figcaption>basic/test4.svg with the default viewing parameters</figcaption>
+    <br />
+    <br />
+
+    <h2>Task 2</h2>
+    <p>
+      Supersampling is useful as it samples multiple points inside each pixel to
+      reduce the effects of aliasing, which can cause "jaggies" or jagged edges
+      on rendered objects. In our supersampling algorithm, we are able to
+      antialias the rasterization of our triangle by setting each pixel of the
+      frame_buffer to the average color of super-samples inside that pixel.
+    </p>
+    <p>
+      In order to antialias the triangle by supersampling, we added to our
+      rasterize_triangle algorithm from task 1. First, we divided each point
+      inside the triangle into multiple smaller pixels based on the given
+      sample_rate, by multiplying the x and y coordinates of the triangle's
+      vertices by the square root of sample_rate. By doing this, we are
+      increasing the resolution of the triangle, enabling us to sample multiple
+      points per pixel. Then, as per our original task 1 algorithm, we loop
+      through points in the triangle, sampling from the left. To account for
+      supersampling in our other functions, we changed set_sample_rate and
+      set_framebuffer_target to appropriately resize sample_buffer according to
+      the sample_rate. In resolve_to_framebuffer, we looped through the pixels
+      and looped through the supersampled points, setting the value of the pixel
+      to the average colour of the super samples. The fill_pixel function was
+      also modified to consider the rasterization of lines, such as the
+      borderline in test 4.
+    </p>
+
+    <p></p>
+
+    <br />
+    <br />
+
+    <h2>Task 3</h2>
+    <p>
+      We transformed cubeman so that he's looking off into the distance (he
+      would be squinting if he had eyes). His head is tilted back slightly
+      (rotated), and his left arm is angled (the two parts rotated and
+      translated) to place his "hand" on his "hip". His right arm is angled
+      upwards (rotated and translated), shielding his eyes (again, if he had
+      eyes).
+    </p>
+    <img src="./task3.png" width="600px" id="figure" />
+    <figcaption>Cubeman squinting off into the distance</figcaption>
+    <p></p>
+    <br />
+    <br />
+
+    <h2>Task 4</h2>
+    <p>
+      Barycentric coordinates are a coordinate system which can be used to
+      express any point on a triangle in reference to the scalar values at the
+      vertices of the triangle. This allows us to interpolate to obtain smoothly
+      varying values across the surface. An example can be seen below in the
+      triangle with a red, green, and blue vertex, producing a smoothly blended
+      color triangle. Barycentric coordinates allow us to retrieve the color at
+      any point in the triangle, which will be a blend of the three colors of
+      the three vertices depending on the point's position relative to each
+      vertex. Points closer to the blue vertex will contain more of a blue
+      "value", and this applies respectively for each vertex.
+    </p>
+    <img src="./task_4.svg" width="600px" id="figure" />
+    <figcaption>A smoothly blended color triangle</figcaption>
+
+    <img src="./task_4.png" width="600px" id="figure" />
+    <figcaption>
+      A screenshot of svg/basic/test7.svg with default viewing parameters and
+      sample rate 1
+    </figcaption>
+
+    <br />
+    <br />
+
+    <h2>Task 5</h2>
+    <p>
+      Pixel sampling is used to display textures. It maps the pixels on a screen
+      to texture pixels, also known as "texels". We use this technique to
+      convert coordinates to the texture space, and map information from the
+      texture space to the image. See the figure below for an example.
+    </p>
+    <p>
+      Nearest Pixel Sampling and Bilinear Pixel Sampling are types of methods
+      for pixel sampling that we implemented in this assignment. Nearest Pixel
+      Sampling consists of finding the closest texel value through rounding the
+      specific texture coordinates at a given pixel's location. This method is
+      fast, however, it can produce jaggies or unwanted artifacts. Bilinear
+      Pixel Sampling uses linear interpolation to identify texels, and
+      calculates the average color value.
+    </p>
+    <p>
+      Our implementation of sample_nearest involves taking the texture
+      coordinates (u,v) of a pixel, and returning the color of the nearest texel
+      to that pixel. As such, each pixel is assigned to the color of the texel
+      that it is the closest to.
+    </p>
+    <p>
+      Our implementation of sample_bilinear involves taking in the texture
+      coordinates (u,v) of a pixel, and returning the color of that pixel based
+      on the weighted average of the colors around it, specifically of four
+      surrounding texels. This method produces a smoother texture as it blends
+      colors between neighbouring texels.
+    </p>
+    <p>
+      Both functions, sample_nearest and sample_bilinear are called within the
+      rasterize_textured_triangle function, which loops through pixels of the
+      triangle and calculates the texture coordinates at each pixel using
+      barycentric interpolation. Then, we call the respective sampling function
+      (nearest or bilinear) to apply the color of the pixel.
+    </p>
+    <br /><br />
+    <div id="row">
+      <div>
+        <img src="./task5_1.png" width="350px" id="figure" />
+        <figcaption>Nearest sampling at 1 sample per pixel</figcaption>
+      </div>
+      <div>
+        <img src="./task5_2.png" width="350px" id="figure" />
+        <figcaption>Bilinear sampling at 1 sample per pixel</figcaption>
+      </div>
+    </div>
+    <br /><br />
+    <div id="row">
+      <div>
+        <img src="./task5_3.png" width="350px" id="figure" />
+        <figcaption>Nearest sampling at 16 samples per pixel</figcaption>
+      </div>
+      <div>
+        <img src="./task5_4.png" width="350px" id="figure" />
+        <figcaption>Bilinear sampling at 16 samples per pixel</figcaption>
+      </div>
+    </div>
+    <br />
+    <br />
+
+    <h2>Task 6</h2>
+    <p>
+      Level sampling and pixel mapping are both used to perform texture aliasing
+      in texture mapping. Level sampling differs in that it samples from
+      mipmaps, also known as minified textures, where the highest mipmaps have
+      the lowest resolutions of texture, and level zero mipmaps have full
+      resolutions. This technique is ideal when a higher resolution texture
+      space is attempting to map onto a lower resolution screen space. Level
+      sampling decreases the resolution of the texture image to a resolution
+      that matches the screen's sampling rate, to avoid having many texels
+      involved in one pixel. This way, a desired one to one mapping between the
+      texture and screen space can be acheived, eliminating aliasing.
+    </p>
+    <p>
+      Our algorithm selects the appropriate mipmap by calculating the texture
+      coordinates in (u,v) for (x, y), (x+1 y), and (x, y+1). Then, these are
+      used to calculate the partial derivatives, with respect to x and y. Taking
+      log with base 2 of the max absolute square sum of each partial
+      derivatives, will give back the desired mipmap level. We implemented this
+      process in the rasterize_textured_triangle, sample, and get_level
+      functions. For the options available, we can select nearest level, or
+      bilinear, which computes a weighted sum from each adjacent mipmap level
+      using interpolation.
+    </p>
+    <p>
+      Now, we can adjust our sampling technique by (1) pixel sampling, (2) level
+      sampling, and (3) number of samples per pixel. Here are some tradeoffs
+      between speed, memory usage, and antialiasing power between the three
+      various techniques...
+    </p>
+    <p>
+      <span style="font-weight: bold">Pixel Sampling: </span>
+      Pixel sampling is fast for nearest sampling and slow for bilinear
+      sampling. Its memory usage is relatively low since it does not store and
+      computational results. In terms of its power, pixel sampling tends to be
+      weaker at producing images when textures are minified. The more minified
+      or complicated an image is, the more antialiasing tends to exist, which
+      can cause problems.
+    </p>
+    <p>
+      <span style="font-weight: bold">Level Sampling: </span>
+      Level sampling is also fast for nearest sampling and slower for bilinear
+      sampling. In terms of speed, it is still faster than supersampling. Its
+      memory usage is low, as it also does not store computational results. For
+      its power, level sampling is the most efficient at antialiasing when
+      texture minification is required or necessary to perform. It is effective
+      at mapping textures from higher resolutions texture spaces into a lower
+      resolution screen space.
+    </p>
+    <p>
+      <span style="font-weight: bold"
+        >Number of Samples per Pixel (Supersampling):
+      </span>
+      Finally, supersampling's speed is slow and uses the most memory. Although
+      it is a good technique for higher sampling rates, it takes up a ton of
+      memory. This is due to needing to save each super sample value, requiring
+      lots of computational effort. However, it can be effective at eliminating
+      almost all aliasing.
+    </p>
+
+    <br /><br />
+    <div id="row">
+      <div>
+        <img src="./task5-1.png" width="350px" id="figure" />
+        <figcaption>[REPLACE] L_ZERO and P_NEAREST</figcaption>
+      </div>
+      <div>
+        <img src="./task5-2.png" width="350px" id="figure" />
+        <figcaption>[REPLACE] L_ZERO and P_LINEAR</figcaption>
+      </div>
+    </div>
+    <br /><br />
+    <div id="row">
+      <div>
+        <img src="./task5-1.png" width="350px" id="figure" />
+        <figcaption>[REPLACE] L_NEAREST and P_NEAREST</figcaption>
+      </div>
+      <div>
+        <img src="./task5-2.png" width="350px" id="figure" />
+        <figcaption>[REPLACE] L_NEAREST and P_LINEAR</figcaption>
+      </div>
+    </div>
+  </body>
 </html>
